--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ body {
     line-height: 1.6;
 }
 
-body#container {
+#container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: auto 1fr 5rem;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: auto 1fr auto; 
     grid-template-areas: 
-        "header header header header header"
-        "sidebar main main main main"
-        "footer footer footer footer footer";
+        "header header"
+        "sidebar main"
+        "footer footer";
     min-height: 100vh;
 }
 
@@ -38,13 +38,119 @@ header {
 
 .content {
     grid-area: main;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 1rem;
 }
 
 footer {
     grid-area: footer;
     background: #333;
-    color: #fff;
+    color: white;
     text-align: center;
     padding: 1rem;
+}
+
+#auth {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+#auth form {
+    background: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: opacity 0.5s, transform 0.5s;
+}
+
+#auth form.transitioning {
+    opacity: 0;
+    transform: scale(0.95);
+}
+
+#auth form h2 {
+    margin-bottom: 1rem;
+}
+
+#auth form label {
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+}
+
+#auth form input {
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+}
+
+#auth form button {
+    padding: 0.5rem;
+    border: none;
+    background: #333;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: 'Product Sans', sans-serif;
+    font-size: 1rem;
+}
+
+#auth form button:hover {
+    background: #555;
+}
+
+#toggleForm {
+    margin-top: 1rem;
+    font-size: 0.9rem;
+    color: #333;
+}
+
+#toggleForm a {
+    color: #0066cc;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#toggleForm a:hover {
+    text-decoration: underline;
+}
+
+#messages {
+    margin-top: 1rem;
+    font-size: 1rem;
+    padding: 5px; /* 10px top/bottom padding, 0 left/right padding */
+    text-align: center;
+    display: inline-block;
+    max-width: 100%; /* Ensure it does not overflow the container */
+    box-sizing: border-box;
+    display: none;
+    border-radius: 5px;
+}
+
+/* Error message styling */
+.message-error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+}
+
+/* Success message styling */
+.message-success {
+    color: #155724;
+    background-color: #d4edda;
+    border: 1px solid #c3e6cb;
+}
+
+#messages.message-visible {
+    display: block;
 }
