--- a/style.css
+++ b/style.css
@@ -282,3 +282,48 @@ footer {
 .hidden {
     display: none !important;
 }
+
+
+.schema-container {
+    display: flex;
+    align-items: center;
+}
+
+.table {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 250px;
+    margin: 0 20px;
+    overflow: hidden;
+}
+
+.table-title {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    font-size: 1.2rem;
+}
+
+.table-content {
+    padding: 10px;
+}
+
+.table-row {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 0;
+}
+
+.table-row .column {
+    width: 50%;
+    text-align: left;
+}
+
+.arrow {
+    font-size: 2rem;
+    color: #333;
+    margin: 0 10px;
+}
